# viam-ai-updater

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ai-updater-demo.yml  ai-updater-exp.yml  ai-updater-local.yml  ai-updater-specifics.yml  ai-updater-test.yml  ai-updater.yml
ai_updater/: ai-updater.yml  ai_updater.py  ai_updater_tools.py  diff_tree.zsh
ai_updater/prompts/: applychanges_prompts.py  diffparser_prompt.py  diffparser_prompts.py  diffparser_system.py  funcgenerator_prompt.py  funcgenerator_system.py  generateimplementations_prompts.py  getrelevantcontext_prompt.py  getrelevantcontext_prompts.py  getrelevantcontext_system.py
ai_updater/tests/: .gitignore  pytest.ini  test_ai_updater.py
ai_updater/tests/scenario-1/: proto_diff.txt
ai_updater/tests/scenario-5/: proto_diff.txt
ai_updater/tests/scenario-8/: proto_diff.txt
src/ai_updater/: __init__.py  ai_updater_tools.py  ai_updater_utils.py
src/ai_updater/clients/: anthropic.py  base.py  google.py
src/ai_updater/prompts/: applychanges_prompts.py  getrelevantcontext_prompts.py
